# contextweaver

./: .commit-msg  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  BOUNTY_HUNTER_EXECUTION_REPORT.json  BOUNTY_HUNTER_FIX_PLAN.json  BOUNTY_HUNTER_LLM_CODE_PATCH.diff  BOUNTY_HUNTER_REAL_CODE_PATCH.diff  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_ONRAMP.md  Dockerfile  LABEL_TAXONOMY.md  Makefile  README.md  SECURITY.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  server.json  test_output.txt  tmpclaude-e47a-cwd
.bounty_hunter/submission/: BOUNTY_CLAIM.md  DIFF_STAT.txt  PATCH.diff  PR_BODY.md  PR_TITLE.txt  TEST_RESULTS.json
.claude/: .gitignore  CLAUDE.md  settings.json
.claude/hooks/: session-start.sh
.claude/rules/: sensitivity.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml  good_first_issue.md  integration_request.yml
.github/instructions/: context.instructions.md  routing.instructions.md  sensitivity.instructions.md
.github/prompts/: add-eval.prompt.md  add-feature.prompt.md  fix-bug.prompt.md  refactor-module.prompt.md
.github/workflows/: benchmark-delta.yml  benchmark-scale.yml  benchmark-scorecard-weekly.yml  ci.yml  codeql.yml  deps-latest-weekly.yml  docker-publish.yml  docs.yml  ossf-scorecard.yml  pip-audit.yml  publish.yml  scorecard-weekly.yml
api/: public_api.txt
benchmarks/: README.md  _firewall_measurement.py  benchmark.py  e2e_quality.py  gateway_benchmark.py  gateway_scorecard.md  gating.yaml  large_catalog.py  large_catalog_scorecard.md  primitive_gateway_benchmark.py  routing_gold.json  routing_scale.py  scenario_routing.md  scenario_routing.py  scorecard.md  smoke_eval.py  sweep_scoring.md  token_calibration.py  trend.md
benchmarks/e2e/: tasks.json
benchmarks/results/: context_rot.json  gateway_latest.json  latest.json
benchmarks/scenarios/: large_catalog.jsonl  long_conversation.jsonl  mixed_payload.jsonl  routing_choicecard.json  short_conversation.jsonl  stress_conversation.jsonl  tiny_payload.jsonl
benchmarks/smoke/: conversation.jsonl  openai_messages.json  routing_cases.json
docs/: architecture.md  benchmark_report.md  benchmarks.md  comparison.md  concepts.md  context_firewall.md  context_firewall_boundary.md  context_rot.md  contracts.md  contributing_fixtures.md  contributing_paths.md  cookbook.md  daily_driver.md  docker.md  ecosystem.md  errors.md  faq.md  gateway_spec.md  gen_ref_pages.py  guide_agent_loop.md  index.md  integration_a2a.md  integration_agent_framework.md  integration_agent_skills.md  integration_agno.md  integration_crewai.md  integration_google_adk.md  integration_langchain.md  integration_llamaindex.md  integration_mcp.md  integration_memory.md  integration_openai_adk.md  integration_openapi.md  integration_otel.md  integration_pipecat.md  integration_puppetmaster.md  integration_pydantic_ai.md  integration_smolagents.md  interop.md  interop_skill_cards.md  (+22 more)
docs/agent-context/: architecture.md  invariants.md  labels.md  lessons-learned.md  model-backed-features.md  review-checklist.md  routing-invariants.md  workflows.md
docs/architectures/: catalog_showcase.md  code_review_bot.md  eval_artifact_profile.md  index.md  langgraph_agent_loop.md  mcp_context_gateway.md  (+2 more)
examples/: a2a_adapter_demo.py  agent_framework_adapter_demo.py  agno_adapter_demo.py  before_after.py  crewai_adapter_demo.py  fastmcp_adapter_demo.py  fastmcp_discovery_demo.py  full_agent_loop.py  hydrate_call_demo.py  knowledge_bundles_demo.py  langchain_memory_demo.py  mcp_adapter_demo.py  mcp_gateway_demo.py  mcp_primitives_demo.py  mcp_proxy_demo.py  minimal_loop.py  openapi_routing_demo.py  pydantic_ai_adapter_demo.py  routing_demo.py  sample_catalog.json  sample_catalog.yaml  sidecar_demo.py  skills_routing_demo.py  smolagents_adapter_demo.py  tool_wrapping.py
notebooks/: context_rot_live.ipynb
scaffolds/: new_adapter.py
schemas/: build_stats.schema.json  catalog.schema.json  choice_card.schema.json  result_envelope.schema.json  route_trace.schema.json
scripts/: _benchmark_gate_cells.py  _gold_expansion.py  _golden.py  baseline_naive.py  benchmark_delta.py  benchmark_gate.py  capture_mcp_catalog.py  check_doc_snippets.py  check_module_size.py  check_readme_version.py  check_security_policy.py  check_version_metadata.py  context_rot_demo.py  drift_check.py  gen_api_manifest.py  gen_llms.py  gen_schemas.py  module_size_baseline.json  new_adapter.py  record_demo.py  render_gateway_scorecard.py  render_scorecard.py  render_trend.py  snapshot_mcp_catalog.py  sweep_scoring.py  weaver_spec_conformance.py
tests/: conftest.py  test__verify.py  test_adapters.py  test_adapters_agent_framework.py  test_adapters_agent_skills.py  test_adapters_agno.py  test_adapters_anthropic_messages.py  test_adapters_chainweaver.py  test_adapters_crewai.py  test_adapters_expertise_pack.py  test_adapters_fastmcp_discovery.py  test_adapters_framework_common.py  test_adapters_gemini_contents.py  test_adapters_google_adk.py  test_adapters_langchain.py  test_adapters_lessons.py  test_adapters_okf.py  test_adapters_openai_agents.py  test_adapters_openai_messages.py  test_adapters_openapi.py  test_adapters_pydantic_ai.py  test_adapters_repo_knowledge.py  test_adapters_smolagents.py  test_adapters_weaver.py  test_advisor_pack.py  test_architectures_catalog_showcase.py  test_architectures_code_review.py  test_architectures_contextweaver_to_chainweaver.py  test_architectures_eval_artifact_profile.py  test_architectures_langgraph_agent_loop.py  test_architectures_mcp_context_gateway.py  test_architectures_mcp_context_gateway_live.py  test_architectures_mcp_context_gateway_multi.py  test_architectures_mcp_context_gateway_real.py  test_architectures_slack.py  test_architectures_voice.py  test_artifact_policy.py  test_baseline_naive.py  test_benchmark.py  test_benchmark_delta.py  (+171 more)
(+395 files in other folders)
