[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextweaver"
version = "0.4.0"
description = "Dynamic context management for tool-using AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Diogo Santos", email = "diogofcul@hotmail.com" }]
keywords = [
    "ai",
    "agents",
    "context",
    "context-engineering",
    "llm",
    "tools",
    "tool-routing",
    "mcp",
    "prompt-budgeting",
    "agent-infrastructure",
    "routing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
# Core runtime dependencies.  contextweaver opted into shipping the MCP SDK
# and ``jsonschema`` as core (rather than gating them behind optional extras)
# when the MCP proxy / gateway runtimes landed in v0.4: both are load-bearing
# for the gateway invocation contract (see ``docs/gateway_spec.md`` §4.4) and
# gating them behind extras forced every caller through a guarded-import
# dance.  ``tiktoken``, ``PyYAML``, ``rank-bm25`` are broadly used in GenAI
# stacks (often already pulled in transitively) and unblock default behaviour
# the library would otherwise have to approximate.  Other heavy or
# runtime-specific packages remain under [project.optional-dependencies].
dependencies = [
    "tiktoken>=0.5",
    "PyYAML>=6.0",
    "rank-bm25>=0.2",
    "mcp>=1.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/dgenio/contextweaver"
Documentation = "https://dgenio.github.io/contextweaver"
Repository = "https://github.com/dgenio/contextweaver"
Changelog = "https://github.com/dgenio/contextweaver/blob/main/CHANGELOG.md"
Issues = "https://github.com/dgenio/contextweaver/issues"
Discussions = "https://github.com/dgenio/contextweaver/discussions"

[project.optional-dependencies]
# Dev / test toolchain. Includes weaver_contracts + jsonschema so the
# weaver-spec adapter (#143) and CI conformance check (#145) run on every PR
# without requiring the [weaver-spec] runtime extra.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "weaver_contracts>=0.2,<1",
    # 4.18 ships ``referencing`` — the conformance script's local $ref
    # resolver depends on it (PR #201 review).
    "jsonschema>=4.18",
]
# weaver-spec contract adapter (https://github.com/dgenio/weaver-spec).
# Runtime extra for end users who want to interoperate with the canonical
# Weaver Stack contracts without pulling the full [dev] toolchain.
weaver-spec = [
    "weaver_contracts>=0.2,<1",
]
# FastMCP adapter integration.
fastmcp = [
    "fastmcp>=2.0",
]
# LangChain integration examples.
langchain = [
    "langchain-core>=0.3",
]
# Docs site (mkdocs).
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]
# Enhanced CLI: rich-formatted output (tree, tables) for the existing argparse CLI.
# A typer-based rewrite of __main__.py is tracked separately under the v0.6 milestone;
# do not add typer here until that work lands so the extra reflects what users actually get.
cli = [
    "rich>=13.0",
]
# Fuzzy lexical retrieval backend (rapidfuzz) — supplements the default BM25
# scorer for typo / abbreviation tolerance.
retrieval = [
    "rapidfuzz>=3.0",
]
# Approximate-nearest-neighbour backends. Reserved for future embedding-based
# routing (#8). No functional code references these yet.
ann = [
    "hnswlib>=0.8",
]
# Persistent SQLite-backed stores (issues #174 / #223).  The implementations
# rely only on stdlib ``sqlite3``; this extras group exists so installs can
# opt into a future ``aiosqlite``-based async variant or schema-migration
# tooling without changing the public install surface.  Empty today on
# purpose — the contract is "if you want the SQLite stores, install this
# extra" even though it currently adds no third-party deps.
sqlite = []
# OpenTelemetry tracing + metrics export.
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
# NetworkX-backed graph ops. Reserved; no functional code references these yet.
graph = [
    "networkx>=3.0",
]
# Convenience: install every optional capability at once.
all = [
    "contextweaver[cli]",
    "contextweaver[retrieval]",
    "contextweaver[ann]",
    "contextweaver[otel]",
    "contextweaver[graph]",
    "contextweaver[weaver-spec]",
]

[project.scripts]
contextweaver = "contextweaver.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapidfuzz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

# weaver_contracts does not ship a py.typed marker; treat as untyped for mypy
# while still being a real installed package the adapter can import.
[[tool.mypy.overrides]]
module = "weaver_contracts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["contextweaver"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == ['\"]__main__['\"]",
]
