[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextweaver"
version = "0.10.0"
description = "Dynamic context management for tool-using AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Diogo Santos", email = "diogofcul@hotmail.com" }]
keywords = [
    "ai",
    "agents",
    "context",
    "context-engineering",
    "llm",
    "tools",
    "tool-routing",
    "mcp",
    "prompt-budgeting",
    "agent-infrastructure",
    "routing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
# Core runtime dependencies.  contextweaver opted into shipping the MCP SDK
# and ``jsonschema`` as core (rather than gating them behind optional extras)
# when the MCP proxy / gateway runtimes landed in v0.4: both are load-bearing
# for the gateway invocation contract (see ``docs/gateway_spec.md`` §4.4) and
# gating them behind extras forced every caller through a guarded-import
# dance.  ``tiktoken``, ``PyYAML``, ``rank-bm25`` are broadly used in GenAI
# stacks (often already pulled in transitively) and unblock default behaviour
# the library would otherwise have to approximate.  ``typer`` and ``rich``
# moved into core in v0.5 alongside the Typer CLI rewrite (#221) — the CLI
# is one of the project's primary user touchpoints and the ``_HAS_RICH``
# guarded-import dance had become its own maintenance burden.  Other heavy
# or runtime-specific packages remain under [project.optional-dependencies].
dependencies = [
    "tiktoken>=0.5",
    "PyYAML>=6.0",
    "rank-bm25>=0.2",
    "mcp>=1.0",
    "jsonschema>=4.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/dgenio/contextweaver"
Documentation = "https://dgenio.github.io/contextweaver"
Repository = "https://github.com/dgenio/contextweaver"
Changelog = "https://github.com/dgenio/contextweaver/blob/main/CHANGELOG.md"
Issues = "https://github.com/dgenio/contextweaver/issues"
Discussions = "https://github.com/dgenio/contextweaver/discussions"

[project.optional-dependencies]
# Dev / test toolchain. Includes weaver_contracts + jsonschema so the
# weaver-spec adapter (#143) and CI conformance check (#145) run on every PR
# without requiring the [weaver-spec] runtime extra.  ``crewai`` and ``mem0ai``
# are pulled in so the CrewAI adapter (#193) and Mem0 external-memory backend
# (#195) are exercised against real upstream wire shapes on every CI run.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "weaver_contracts>=0.2,<1",
    # 4.18 ships ``referencing`` — the conformance script's local $ref
    # resolver depends on it (PR #201 review).
    "jsonschema>=4.18",
    "crewai>=0.80",
    "mem0ai>=0.1",
    # FastMCP is pulled into [dev] so the CodeMode discovery-tool integration
    # test (``tests/test_adapters_fastmcp_discovery.py``) — which spins up a
    # real in-memory FastMCP server — runs on every CI matrix cell.  The
    # ``[fastmcp]`` runtime extra below stays for end users who don't want
    # the dev toolchain.
    "fastmcp>=2.0",
]
# weaver-spec contract adapter (https://github.com/dgenio/weaver-spec).
# Runtime extra for end users who want to interoperate with the canonical
# Weaver Stack contracts without pulling the full [dev] toolchain.
weaver-spec = [
    "weaver_contracts>=0.2,<1",
]
# FastMCP adapter integration.
fastmcp = [
    "fastmcp>=2.0",
]
# CrewAI adapter integration (issue #193).  Pulls the CrewAI runtime so user
# applications can import the live-discovery helper
# (``contextweaver.adapters.crewai.load_crewai_catalog``).  The plain-dict
# conversion path (``crewai_tool_to_selectable`` / ``crewai_tools_to_catalog``)
# works without this extra installed.
crewai = [
    "crewai>=0.80",
]
# Pydantic AI adapter integration (issue #272, child of #193).  Pulls the
# pydantic-ai runtime so user applications can import the live-discovery
# helper ``contextweaver.adapters.pydantic_ai.load_pydantic_ai_catalog`` and
# the message round-trip helpers.  Plain-dict / message-dict paths work
# without this extra installed.
pydantic-ai = [
    "pydantic-ai>=0.0.20",
]
# smolagents adapter integration (issue #274, child of #193).  Pulls the
# Hugging Face smolagents runtime so user applications can import the
# live-discovery helper ``contextweaver.adapters.smolagents.load_smolagents_catalog``
# and the ``from_smolagents_agent`` step-log ingestor.  Plain-dict / step-dict
# paths work without this extra installed.
smolagents = [
    "smolagents>=1.0",
]
# Agno adapter integration (issue #275, child of #193).  Pulls the Agno
# (formerly Phidata) runtime so user applications can import the
# live-discovery helper ``contextweaver.adapters.agno.load_agno_catalog`` and
# the ``from_agno_session`` history ingestor.  Plain-dict / message-dict paths
# work without this extra installed.
agno = [
    "agno>=1.0",
]
# LangChain integration examples.
langchain = [
    "langchain-core>=0.3",
]
# Real-time voice agents: Pipecat frame processors composed with the
# contextweaver context engine.  Optional because pipecat-ai pulls heavy
# transitive deps (audio codecs, VAD models) — the
# ``examples/architectures/voice_agent`` script runs end-to-end without
# this extra installed; install only when you want to wire contextweaver
# into a real Pipecat ``FrameProcessor`` (see
# ``docs/integration_pipecat.md`` for the worked code).
voice = [
    "pipecat-ai>=0.0.50",
]
# Docs site (mkdocs).  The mkdocs-material major is pinned (`<10`) so a future
# 10.x breaking change cannot silently regress the docs build on a fresh `pip
# install -e ".[docs]"` (#256).  Likewise for the mkdocstrings major.  Bump the
# upper bound deliberately when adopting a new major.
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.25,<1",
    "mkdocs-gen-files>=0.5,<1",
    "mkdocs-literate-nav>=0.6,<1",
    "mkdocs-section-index>=0.3,<1",
]
# Deprecated empty alias.  Typer + Rich became core deps in v0.5 (#221), so
# ``pip install 'contextweaver[cli]'`` is now equivalent to a plain install.
# Kept as a no-op for one cycle so existing requirements pins do not break;
# scheduled for removal in v0.6.
cli = []
# Fuzzy lexical retrieval backend (rapidfuzz) — supplements the default BM25
# scorer for typo / abbreviation tolerance.
retrieval = [
    "rapidfuzz>=3.0",
]
# Approximate-nearest-neighbour backends. Reserved; the in-tree embedding
# retriever (#8) does an exhaustive O(N) similarity scan and is enough for
# catalogs under ~10k items.  Wire hnswlib in via a follow-up issue when the
# fitted-corpus size justifies an indexed search.
ann = [
    "hnswlib>=0.8",
]
# Embedding-based retrieval backend (#8). Activates
# :class:`contextweaver.extras.embeddings.SentenceTransformerBackend` and the
# Router's ``embedding_backend=`` kwarg.  Heavy: pulls torch via
# sentence-transformers, so it stays optional.
embeddings = [
    "sentence-transformers>=2.0",
]
# Persistent SQLite-backed stores (issues #174 / #223).  The implementations
# rely only on stdlib ``sqlite3``; this extras group exists so installs can
# opt into a future ``aiosqlite``-based async variant or schema-migration
# tooling without changing the public install surface.  Empty today on
# purpose — the contract is "if you want the SQLite stores, install this
# extra" even though it currently adds no third-party deps.
sqlite = []
# External-memory backend interop (issue #195).  Each backend implements the
# existing ``EpisodicStore`` / ``FactStore`` protocols from
# ``contextweaver.store.protocols`` without widening them.  Adapters live
# under ``contextweaver.extras.memory.*``.  Only Mem0 is shipped today; Zep
# and LangMem rows are listed in ``docs/integration_memory.md`` as
# follow-ups against the same protocol surface.
mem0 = [
    "mem0ai>=0.1",
]
# OpenTelemetry tracing + metrics export with native GenAI semantic
# conventions (#224).  Pinned at >=1.27 because the
# ``opentelemetry.semconv.attributes.gen_ai_attributes`` module landed in
# that release — older floors require hand-typing the attribute strings.
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-semantic-conventions>=0.48b0",
]
# NetworkX-backed graph ops. Reserved; no functional code references these yet.
graph = [
    "networkx>=3.0",
]
# End-to-end real-model benchmark hook (issue #269).  Empty today on purpose:
# the harness uses ``urllib.request`` against an OpenAI-compatible HTTP
# endpoint and does not need a vendor SDK.  The extras group exists so
# callers can ``pip install 'contextweaver[e2e-eval]'`` to opt into the
# capture without changing the public install surface, and future
# additions (a benchmark-only ``openai`` SDK pin or alternative provider
# helpers) can land here without churning the install command in docs.
e2e-eval = []
# Convenience: install every optional capability at once.
all = [
    "contextweaver[retrieval]",
    "contextweaver[ann]",
    "contextweaver[embeddings]",
    "contextweaver[otel]",
    "contextweaver[graph]",
    "contextweaver[weaver-spec]",
    "contextweaver[voice]",
    "contextweaver[e2e-eval]",
]

[project.scripts]
contextweaver = "contextweaver.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "crewai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_ai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "smolagents.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agno.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mem0.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapidfuzz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

# Typer's ``@app.command()`` decorator is typed as a generic callable in 0.9-
# 0.12, which trips ``disallow_untyped_decorators`` under strict mypy.
# Carve out ``__main__`` (the only Typer consumer) rather than disable the
# strictness globally.
[[tool.mypy.overrides]]
module = "contextweaver.__main__"
disallow_untyped_decorators = false

# weaver_contracts does not ship a py.typed marker; treat as untyped for mypy
# while still being a real installed package the adapter can import.
[[tool.mypy.overrides]]
module = "weaver_contracts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["contextweaver"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == ['\"]__main__['\"]",
]
